Initial porting work to 1.12